--- a/WeddingStyle.css
+++ b/WeddingStyle.css
@@ -40,6 +40,10 @@ img {
     position: relative;
     text-align: center;
     color: white;
+    width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row: 1;
 }
 
 .title-text {
@@ -69,6 +73,9 @@ p,li {
         max-width:980px;
         margin:auto;
         background-color:  #e4ebe0;
+        position: relative;
+        display: grid;
+        grid-template-columns: auto auto auto;
 }
 
 * {
@@ -86,15 +93,17 @@ p,li {
     box-sizing: border-box;
     float: left;
 }
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-right {width: 50%;}
-    .col-left {width: 50%;}
+
+.col-right {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row: 2;
 }
-@media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-right {width: 50%;}
-    .col-left {width: 50%;}
+
+.col-left {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row: 2;
 }
 
 .option-button {
@@ -152,13 +161,13 @@ p,li {
 }
 
 .footer{
-    padding-top: 30px;
-    padding-bottom: 20px;
-    padding-right: 10px;
-    padding-left: 10px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 10%;
+    padding: 10px;
     font-family: "Raleway";
-    background-color: #e4ebe0;
-    color: black;
+    background-color: #7a9b66;
+    color: white;
 }
 
 .main-entry {
@@ -175,4 +184,5 @@ p,li {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     background-color: #7a9b66;
     padding: 10px 10px 100px 10px;
+    height: 
 }
